# crypt-usb-drive

./: .gitignore  CMakeLists.txt  make-disk-image  make-disk-image.old  make-ext2-image
src/: README.md  debug.c  debug.h  disk_io.c  image.c  image.h  main.c  secrets-example.h  secrets.c  state_machine.c  state_machine.h  usb_descriptors.c
